<resources>
    <string name="app_name">熊猫玩玩</string>
    <string name="app_slogan">游戏着，快乐着</string>
    <string name="private_app_id">679fd651e26e4cf99f483ef679f1430a</string>
    <string name="legal_channel_name_characters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!#$%&amp;()+,-:;&lt;=.>?@[]^_`{|}~</string>
    <string name="text_induce_start">立即体验</string>
    <string name="immediately_in">直接进入</string>
    <string name="text_induce_register">您还没有登录，赶快加入我们，一起去战斗吧！</string>
    <string name="register_login">登录</string>
    <string name="treasury">宝窟</string>
    <string name="friend">好友</string>
    <string name="winAward">赢大奖</string>
    <string name="fight">游戏</string>
    <string name="mine">我</string>
    <string name="game_explain">游戏说明</string>
    <string name="game_award_explain">奖励说明</string>
    <string name="game_go_charts">查看排行榜</string>
    <string name="game_rank_title">排行榜</string>
    <string name="game_start_play">开始游戏</string>
    <string name="user_un_login">用户未登陆</string>
    <string name="mine_person_info">个人信息</string>
    <string name="person_info_save">保存</string>
    <string name="person_head_img">头像</string>
    <string name="person_head_img_camera">相机拍照</string>
    <string name="person_head_img_gallery">相册选图</string>
    <string name="clip_image">头像选择</string>
    <string name="person_nick_name">昵称</string>
    <string name="person_change_nick_name">更改昵称</string>
    <string name="person_modify_name">编辑昵称</string>
    <string name="person_modify_name_hint">输入昵称</string>
    <string name="person_year">出生日期</string>
    <string name="person_sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="person_phone_number">手机号</string>
    <string name="person_modify_phone_number">更换手机号</string>
    <string name="mine_chongzhi">充值</string>
    <string name="buy_diamond">钻石充值</string>
    <string name="sure_buy_diamond">确认充值</string>
    <string name="mine_exchange">交易所</string>
    <string name="exchange_buy">收购</string>
    <string name="exchange_sale">出售</string>
    <string name="sale_diamond">钻石出售</string>
    <string name="purchase_diamond">钻石收购</string>
    <string name="trade_diamond">交易钻石</string>
    <string name="sell_diamond_tips">提示：交易成功会扣除相应的钻石数量，出售钻石所得的钱会直接转入余额</string>
    <string name="sure_sell_diamond">确认交易</string>
    <string name="sure_purchase_diamond">确认收购</string>
    <string name="purchase_diamond_tips">提示：钻石收购要预先支付收购所需金额，收购结束后，剩余金额会转入到账户余额内</string>
    <string name="sure_sale_diamond">确认出售</string>
    <string name="sale_diamond_tips">提示：钻石卖的越多，单价越高哦～</string>
    <string name="exchange_my_buy">我要买入</string>
    <string name="exchange_my_sale">我要卖出</string>
    <string name="mine_convert_diamond">兑流量</string>
    <string name="mine_sign_diamond">领钻石</string>
    <string name="sign">签到</string>
    <string name="sign_explain">签到说明</string>
    <string name="sign_explain_content">1.用户需要，登录后手动签到，每日00：00准时更新签到信息。\n2.第一天签到，每次可随机获得1~10钻奖励；\n3.连续签到三天，每次可随机获得10~20钻奖励;\n4.连续签到七天及以上，每次可随机获得20~50钻奖励。\n5.钻石主要终于游戏内消费，以及赢大奖版本购买参与次数及复活时使用。\n6.钻石可以直接在我的→交易所中，自由交易（严禁一切利用BUG进行的刷单行为，一经查实，永久封号处理）。
    </string>
    <string name="mine_trade_notes">交易记录</string>
    <string name="trade_buy">买入钻石</string>
    <string name="trade_sale">卖出钻石</string>
    <string name="mine_consume">消费记录</string>
    <string name="mine_message">消息</string>
    <string name="mine_win_result_award">获奖列表</string>
    <string name="mine_win_result_award_detail">奖品详情</string>
    <string name="award_mail">邮箱</string>
    <string name="award_mail_hint">邮箱地址</string>
    <string name="award_address">地址</string>
    <string name="award_address_hint">收件人地址</string>
    <string name="award_courier_company">承运来源</string>
    <string name="award_express_no">运单编号</string>
    <string name="mine_win_result">上期赢大奖成绩</string>
    <string name="win_result_title">上期获奖名单</string>
    <string name="mine_i_played">我玩过的游戏</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="feedback_title">反馈主题</string>
    <string name="feedback_content">请输入您要反馈的内容</string>
    <string name="feedback_phone_qq">您的联系电话或者QQ号</string>
    <string name="feedback_commit">提交反馈</string>
    <string name="mine_apply_developer">申请成为开发者</string>
    <string name="mine_apply_developer_no">未申请</string>
    <string name="mine_apply_developer_committed">已提交资料</string>
    <string name="mine_apply_developer_checking">审核中</string>
    <string name="mine_apply_developer_check_successes">已通过审核</string>
    <string name="mine_apply_developer_check_failed">未通过</string>
    <string name="mine_with_cash">提现</string>
    <string name="mine_with_cash_note">提现记录</string>
    <string name="with_cash_band_card">绑定银行卡</string>
    <string name="with_cash_band_card_change">更换银行卡</string>
    <string name="with_cash_un_band_card">更换</string>
    <string name="with_cash_apply">提现申请</string>
    <string name="with_cash_name">姓名</string>
    <string name="with_cash_money">金额</string>
    <string name="with_cash_money_tips">要申请的金额</string>
    <string name="with_cash_card_number">卡号</string>
    <string name="with_cash_current_card">当前卡号</string>
    <string name="with_cash_card_bank">开户行</string>
    <string name="with_cash_name_hint">持卡人姓名</string>
    <string name="with_cash_money_hint">最低1元起</string>
    <string name="with_cash_card_number_hint">请输入银行卡号</string>
    <string name="with_cash_card_bank_hint">请输入银行卡开户行</string>
    <string name="with_cash_commit">提交申请</string>
    <string name="mine_about">关于熊猫玩玩</string>
    <string name="setting">设置</string>
    <string name="about_go_judge">去评分</string>
    <string name="about_faction_des">功能介绍</string>
    <string name="about_check_version">检查新版本</string>
    <string name="about_check_version_hint">当前已是最新版本</string>
    <string name="about_check_find_new_version">发现新版本</string>
    <string name="about_share">推荐给好友</string>
    <string name="about_clear_cache">清除缓存</string>
    <string name="clear_cache">清除缓存中...</string>
    <string name="about_app_company">© 2017-2017 pandawanwan.com All rights reserved</string>
    <string name="mine_exit">退出账户</string>
    <string name="exit_title">注销</string>
    <string name="exit_des">\t\t退出当前账户，可能会丢失本地所有数据，确定要抛弃小熊吗？</string>
    <string name="exit_cancel">我再看看</string>
    <string name="exit_confirm">狠心离开</string>
    <string name="treasure_activate">宝库激活</string>
    <string name="treasure_diamond_rank">碎钻排行榜</string>
    <string name="treasure_consume_diamond">钻石消耗</string>
    <string name="treasure_activate_des">\t\t恭喜您激活宝窟，开启您的财富人生，我们已经赠送您一名橙色矿工，看去看看吧！</string>
    <string name="treasure_mine_worker">我的矿工</string>
    <string name="treasure_add_worker">添加矿工位</string>
    <string name="treasure_choose_worker">矿工选择</string>
    <string name="treasure_worker_employ">雇佣矿工</string>
    <string name="treasure_worker_employ_failed">雇佣失败，请确认该矿工信息！</string>
    <string name="treasure_worker_employ_success">雇佣成功，去我的矿工查看该矿工属性吧～</string>
    <string name="treasure_dismissed_worker">解雇矿工</string>
    <string name="treasure_dismissed_worker_confirm">确认解雇</string>
    <string name="treasure_dismissed_explain">解雇说明</string>
    <string name="treasure_dismissed_explain_content">\t\t每位初始玩家获得5个矿工位，最多开启25个矿工位，宿舍满员后可以选择解雇矿工来雇佣新的矿工。\n</string>
    <string name="treasure_composed_worker">合成矿工</string>
    <string name="treasure_composed_worker_confirm">确认合成</string>
    <string name="treasure_composed_explain">合成说明</string>
    <string-array name="worker_array">
        <item>橙色矿工</item>
        <item>红色矿工</item>
        <item>蓝色矿工</item>
        <item>紫色矿工</item>
    </string-array>
    <string name="treasure_upgrade_worker">升级矿工</string>
    <string name="treasure_upgrade_worker_confirm">升级</string>
    <string name="treasure_upgrade_explain">升级说明</string>
    <string name="treasure_play_explain">玩法说明</string>
    <string name="treasure_extract_time">开采剩余时间</string>
    <string name="treasure_refresh_time">剩余刷新时间:</string>
    <string name="treasure_protect_grade">防护等级:</string>
    <string name="treasure_diamond_convert">兑换钻石</string>
    <string name="treasure_grade">宝窟等级</string>
    <string name="enter_treasure">进入宝窟</string>
    <string name="refresh_treasure">刷新宝窟</string>
    <string name="treasure_refresh">宝窟刷新</string>
    <string name="treasure_delete_title">解除宝窟</string>
    <string name="treasure_attack_treasure">放弃宝窟</string>
    <string name="treasure_race_treasure">占领宝窟</string>
    <string name="treasure_extract_treasure">开采宝窟</string>
    <string name="treasure_send_worker">指定矿工</string>
    <string name="treasure_abandon_treasure">放弃宝窟</string>
    <string name="treasure_modify_worker">更换矿工</string>
    <string name="treasure_delete_des">\t\t当前宝库已开采完毕，解除宝库后，可重新抢占其他宝库开采碎钻～</string>
    <string name="treasure_refresh_des">\t\t确认要刷新当前开采的宝窟？本次刷新有机率出现1～3级的宝窟</string>
    <string name="i_sure">我确认</string>
    <string name="treasure_refresh_worker">刷新矿工</string>
    <string name="treasure_worker_refresh">矿工刷新</string>
    <string name="treasure_worker_refresh_des">\t\t本次刷新需要消耗10颗钻石，有机率刷出高级矿工呦～</string>
    <string name="treasure_employ_worker">可雇佣的矿工</string>
    <string name="treasure_prop_shop">道具商城</string>
    <string name="treasure_prop_mine">我的道具</string>
    <string name="treasure_prop_buy">购买道具</string>
    <string name="treasure_prop_diamond_buy">钻石支付</string>
    <string name="treasure_prop_chips_buy">碎钻支付</string>
    <string name="order_pay">支付订单</string>
    <string name="order_result">支付结果</string>
    <string name="order_pay_failed">订单支付失败</string>
    <string name="order_pay_success">订单支付成功</string>
    <string name="order_pay_generator_failed">订单生成失败</string>
    <string name="order_pay_generator_order">正在生成订单...</string>
    <string name="order_pay_check_environment">检查支付环境...</string>
    <string name="order_pay_check_pay_result">正在查询支付结果...</string>
    <string name="chongzhi_success">充值成功</string>
    <string name="chongzhi_failed">充值失败</string>
    <string name="diamonds_number_no_more">钻石数量不足！</string>
    <string name="game_detail">游戏详情</string>
    <string name="game_more_category">更多分类</string>
    <string name="game_screen_shot">游戏截图</string>
    <string name="game_comment">游戏评论</string>
    <string name="game_comment_all">全部评论</string>
    <string name="diamond_convert">钻石兑换</string>
    <string name="diamond_red_packet">钻石红包</string>
    <string name="friend_message">消息</string>
    <string name="friend_id_no">玩玩号:</string>
    <string name="friend_rank">好友排行</string>
    <string name="friend_hot_point">今日热点</string>
    <string name="friend_my_contacts">我的通讯录</string>
    <string name="friend_phone_contacts">手机通讯录</string>
    <string name="friend_contacts">通讯录</string>
    <string name="friend_new_friend">新的朋友</string>
    <string name="friend_friend_apply">好友申请</string>
    <string name="friend_crowd_notify">群通知</string>
    <string name="friend_new_crowd">群聊申请</string>
    <string name="friend_apply_add_crowd">申请加入群聊</string>
    <string name="friend_conversation_read">标为已读</string>
    <string name="friend_conversation_no_read">标为未读</string>
    <string name="friend_conversation_top">置顶聊天</string>
    <string name="friend_conversation_top_cancel">取消置顶</string>
    <string name="friend_conversation_delete">删除该聊天</string>
    <string name="friend_send_message">发消息</string>
    <string name="friend_add_friend">查找好友</string>
    <string name="friend_add_crowd">查找群聊</string>
    <string name="friend_search_friend">搜索好友</string>
    <string name="friend_search_find_friend">请输入8位用户ID</string>
    <string name="friend_search_find_crowd">请输入10位群号码</string>
    <string name="friend_search_friend_hint">用户ID</string>
    <string name="friend_search_crowd_hint">群聊ID</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="go_setting_wlan">打开WIFI</string>
    <string name="setting_wlan_tips">\t\t当前网络环境不可用或者网速较慢，建议在WIFI环境下使用！</string>
</resources>