<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/height_292dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_185dp"
        android:layout_marginTop="@dimen/height_23dp"
        android:background="@mipmap/icon_treasure_dialog_bg">

        <com.leyou.game.widget.treasury.TreasureTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/height_24dp"
            android:paddingRight="@dimen/height_24dp"
            android:paddingTop="@dimen/height_45dp"
            android:text="@string/treasure_delete_des"
            android:textColor="@color/palm_a4"
            android:textSize="@dimen/text_size_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/height_15dp"
            android:paddingLeft="@dimen/height_36dp"
            android:paddingRight="@dimen/height_36dp"
            android:paddingTop="@dimen/height_15dp">

            <com.leyou.game.widget.treasury.TreasureTextView
                android:id="@+id/tv_treasure_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_34dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@mipmap/icon_treasure_dialog_btn_bg"
                android:gravity="center"
                android:shadowColor="@color/purple_45"
                android:shadowDx="3"
                android:shadowDy="5"
                android:shadowRadius="2"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_15" />

            <com.leyou.game.widget.treasury.TreasureTextView
                android:id="@+id/tv_treasure_confirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_34dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/height_7dp"
                android:layout_weight="1"
                android:background="@mipmap/icon_treasure_dialog_btn_bg"
                android:gravity="center"
                android:shadowColor="@color/purple_45"
                android:shadowDx="3"
                android:shadowDy="5"
                android:shadowRadius="2"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>
    </RelativeLayout>

    <com.leyou.game.widget.treasury.TreasureTextView
        android:layout_width="@dimen/height_210dp"
        android:layout_height="@dimen/height_53dp"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/icon_treasure_dialog_bg_title"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/height_7dp"
        android:shadowColor="@color/blue_1c"
        android:shadowDx="3"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/treasure_delete_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_19" />

</RelativeLayout>