<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg_change_gradually_shape"
    android:orientation="vertical"
    tools:context="com.leyou.game.activity.mine.WithCashBindCardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:layout_marginTop="@dimen/padding_top">

        <ImageView
            android:id="@+id/iv_cash_back"
            android:layout_width="@dimen/height_48dp"
            android:layout_height="@dimen/height_48dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/height_14dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/with_cash_band_card"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_14dp"
            android:src="@mipmap/icon_wallet" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/height_14dp"
            android:layout_marginRight="@dimen/height_14dp"
            android:layout_marginTop="@dimen/height_14dp"
            app:cardCornerRadius="@dimen/height_5dp"
            app:cardElevation="@dimen/height_10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/re_bind_card"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/height_15dp"
                        android:text="@string/with_cash_current_card"
                        android:textColor="@color/black_5D"
                        android:textSize="@dimen/text_size_14" />

                    <TextView
                        android:id="@+id/tv_current_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/height_80dp"
                        android:layout_marginRight="@dimen/height_15dp"
                        android:gravity="center_vertical|right"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLength="20"
                        android:textColor="@color/blue_44"
                        android:textSize="@dimen/text_size_12" />

                </RelativeLayout>

                <View
                    android:id="@+id/view_bind_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1dp"
                    android:background="@color/white_ee" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/height_15dp"
                        android:text="@string/with_cash_name"
                        android:textColor="@color/black_5D"
                        android:textSize="@dimen/text_size_14" />

                    <EditText
                        android:id="@+id/et_with_cash_apply_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/height_80dp"
                        android:layout_marginRight="@dimen/height_15dp"
                        android:background="@drawable/et_register_bg"
                        android:gravity="center_vertical|right"
                        android:hint="@string/with_cash_name_hint"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLength="20"
                        android:textColor="@color/blue_44"
                        android:textColorHint="@color/black_bb"
                        android:textSize="@dimen/text_size_12" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1dp"
                    android:background="@color/white_ee" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/height_15dp"
                        android:text="@string/with_cash_card_number"
                        android:textColor="@color/black_5D"
                        android:textSize="@dimen/text_size_14" />

                    <EditText
                        android:id="@+id/et_with_cash_card_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/height_80dp"
                        android:layout_marginRight="@dimen/height_15dp"
                        android:background="@drawable/et_register_bg"
                        android:gravity="center_vertical|right"
                        android:hint="@string/with_cash_card_number_hint"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="19"
                        android:singleLine="true"
                        android:textColor="@color/blue_44"
                        android:textColorHint="@color/black_bb"
                        android:textSize="@dimen/text_size_14" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1dp"
                    android:background="@color/white_ee" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/height_15dp"
                        android:text="@string/with_cash_card_bank"
                        android:textColor="@color/black_5D"
                        android:textSize="@dimen/text_size_14" />

                    <EditText
                        android:id="@+id/et_with_cash_card_bank"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/height_80dp"
                        android:layout_marginRight="@dimen/height_15dp"
                        android:background="@drawable/et_register_bg"
                        android:gravity="center_vertical|right"
                        android:hint="@string/with_cash_card_bank_hint"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:textColor="@color/blue_44"
                        android:textColorHint="@color/black_bb"
                        android:textSize="@dimen/text_size_12" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_with_cash_commit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_55dp"
            android:layout_marginBottom="@dimen/height_12dp"
            android:layout_marginLeft="@dimen/height_12dp"
            android:layout_marginRight="@dimen/height_12dp"
            android:layout_marginTop="@dimen/height_40dp"
            android:background="@drawable/btn_radius_selector"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
