<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feed_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg_change_gradually_shape"
    android:orientation="vertical"
    tools:context="com.leyou.game.activity.mine.FeedBackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:layout_marginTop="@dimen/padding_top">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/height_48dp"
            android:layout_height="@dimen/height_48dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/height_14dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/mine_feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_1"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/height_7dp"
            android:layout_marginLeft="@dimen/height_14dp"
            android:layout_marginRight="@dimen/height_14dp"
            android:layout_marginTop="@dimen/height_14dp"
            app:cardCornerRadius="@dimen/height_10dp"
            app:cardElevation="@dimen/height_5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">

            <EditText
                android:id="@+id/et_feedback_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40dp"
                android:layout_margin="@dimen/height_5dp"
                android:background="@drawable/et_register_bg"
                android:gravity="center_vertical"
                android:hint="@string/feedback_title"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLength="20"
                android:paddingLeft="@dimen/height_10dp"
                android:textColor="@color/black_a46"
                android:textColorHint="@color/black_bb"
                android:textSize="@dimen/text_size_14" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/height_14dp"
            android:layout_marginRight="@dimen/height_14dp"
            android:layout_marginTop="@dimen/height_7dp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/height_10dp"
            app:cardElevation="@dimen/height_5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_feedback_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/height_5dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_register_bg"
                    android:gravity="left"
                    android:hint="@string/feedback_content"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:maxLength="200"
                    android:padding="@dimen/height_10dp"
                    android:textColor="@color/black_a46"
                    android:textColorHint="@color/black_bb"
                    android:textSize="@dimen/text_size_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1dp"
                    android:background="@color/white_ea" />

                <EditText
                    android:id="@+id/et_feedback_contact_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_50dp"
                    android:layout_margin="@dimen/height_5dp"
                    android:background="@drawable/et_register_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/feedback_phone_qq"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="11"
                    android:padding="@dimen/height_10dp"
                    android:textColor="@color/black_a46"
                    android:textColorHint="@color/black_bb"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_feedback_commit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/height_14dp"
            android:layout_marginLeft="@dimen/height_14dp"
            android:layout_marginRight="@dimen/height_14dp"
            android:layout_marginTop="@dimen/height_14dp"
            android:background="@drawable/btn_radius_selector"
            android:text="@string/feedback_commit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
